# TechMindz_JupLab

./: main.py  pyproject.toml
TM_AI_Env/: Pandas.py
TM_AI_Env/.virtual_documents/: MatPlotLib.ipynb  Pandas.ipynb  Seaborn.ipynb
TM_AI_Env/.virtual_documents/Grimm_Assignment/FIN-10012Assignment_PythonFiles/: Assignment task 6.ipynb
TM_AI_Env/Foundational/: MatPlotLib.ipynb  NumPy.ipynb  Pandas.ipynb  Seaborn.ipynb
TM_AI_Env/Foundational/.ipynb_checkpoints/: MatPlotLib-checkpoint.ipynb  Pandas-checkpoint.ipynb  Seaborn-checkpoint.ipynb
TM_AI_Env/Grimm_Assignment/.ipynb_checkpoints/: Main_Grimm-checkpoint.ipynb
TM_AI_Env/Grimm_Assignment/FIN-10012Assignment_PythonFiles/: Assignment task 4.ipynb  Assignment task 6.ipynb
TM_AI_Env/Grimm_Assignment/FIN-10012Assignment_PythonFiles/.ipynb_checkpoints/: Assignment Task 2-checkpoint.ipynb  Assignment task 5-checkpoint.ipynb  Assignment task 6-checkpoint.ipynb
TM_AI_Env/ML/: 01_Linear_Regression.ipynb  02_Logistic_Regression.ipynb  03_DecisionTreeRegressor.ipynb  04_DecisionTreeClassifier.ipynb  05_RandomForest.ipynb  Extra_Abalone.ipynb
TM_AI_Env/ML/.ipynb_checkpoints/: 00_MachineLearning-checkpoint.ipynb  01_Linear_Regression-checkpoint.ipynb  02_Logistic_Regression-checkpoint.ipynb  05_RandomForest-checkpoint.ipynb
TM_AI_Env/Test_CSV/: data_edit.csv  insurance_data.csv  libraries+stat_new.pptx  multi.xlsx  salaries.csv  tocsv_amal.csv  tocsv_amal.xlsx  toexel_marksheet.xlsx  weather_data_mod.csv  weather_data_mod.xlsx
TM_AI_Env/Test_CSV/.ipynb_checkpoints/: weather_data_mod-checkpoint.csv
