[project]
name = "juplab-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "panda>=0.3.1",
    "pip>=25.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
